plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.3'
}

group 'com.github.novotnyr'
version '4-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11


repositories {
    mavenCentral()
}

ext {
    ideaVersion = '2021.1'
    ijPlatform = System.properties['ijPlatform']
    if (ijPlatform != null) {
        ideaVersion = ijPlatform
    }
}
dependencies {
    implementation 'com.ecwid.consul:consul-api:1.2.2'

    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version = ideaVersion
    updateSinceUntilBuild = false
}
patchPluginXml {
    sinceBuild = '211'
    changeNotes = """
      <ul>
          <li>Require at least IntelliJ 2021.1
      </ul>
      """
}

publishPlugin {
    token = intellijPublishToken
}